--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.2",
     "@tauri-apps/api": "^1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1",
