--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -17,6 +17,9 @@ serde_json = "1"
 notify = { version = "6.1.1" }
 directories = "5.0.1"
 anyhow = "1.0.81"
+debounce = "0.2.2"
+lazy_static = "1.4.0"
+chrono = "0.4.35"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
