--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
       "@components/*": ["src/components/*"],
       "@api/*": ["src/api/*"],
       "@state/*": ["src/store/*"],
+      "@sections/*": ["src/sections/*"],
     }
   },
   "include": ["src"],
