add game with game dialog

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,11 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [
-    "dialog-confirm",
-    "dialog-message",
-    "dialog-open",
-    "shell-open",
+tauri = { version = "1", features = [ "api-all",
     "system-tray",
 ] }
 serde = { version = "1", features = ["derive"] }
