trial add updater functionality

--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,7 @@ Cargo.lock
 
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
+
+*.key
+*.key.pub
+*.pswd
