--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2021"
 tauri-build = { version = "1", features = [] }
 
 [dependencies]
-tauri = { version = "1", features = [ "dialog-all", "shell-open",
+tauri = { version = "1", features = [ "updater", "dialog-all", "shell-open",
     "system-tray",
 ] }
 serde = { version = "1", features = ["derive"] }
