--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ debounce = "0.2.2"
 lazy_static = "1.4.0"
 chrono = "0.4.35"
 sha2 = "0.10.8"
+base64 = "0.22.0"
 
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
