--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,8 +26,8 @@ jobs:
             const { data } = await github.rest.repos.createRelease({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              tag_name: `SaveScum-v${process.env.PACKAGE_VERSION}`,
-              name: `SaveScum v${process.env.PACKAGE_VERSION}`,
+              tag_name: `SaveSentry-v${process.env.PACKAGE_VERSION}`,
+              name: `SaveSentry v${process.env.PACKAGE_VERSION}`,
               body: 'Take a look at the assets to download and install this app.',
               draft: true,
               prerelease: false
