--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "lint-staged": {
     "*.{ts,tsx}": [
+      "tsc --noEmit",
       "eslint --fix",
       "prettier --write --ignore-unknown"
     ]
