--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.2",
+    "@table-library/react-table-library": "^4.1.7",
     "@tauri-apps/api": "^1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
