--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,7 @@ lazy_static = "1.4.0"
 chrono = "0.4.35"
 sha2 = "0.10.8"
 base64 = "0.22.0"
+uuid = { version = "1.8.0", features = ["v4"] }
 ts-rs = "8.1.0" # Generate typescript bindings
 
 [features]
