--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "prepare": "husky",
+    "bindings:generate": "generateBindings.sh"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
@@ -24,6 +26,7 @@
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "husky": "^9.0.11",
     "less": "^4.2.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
