--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "prepare": "husky",
-    "bindings:generate": "./generateBindings.sh"
+    "prepare": "husky"  
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
