--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "prepare": "husky"  
+    "prepare": "husky",
+    "preCommit": "lint-staged",
+    "lint": "eslint --ext .ts,.tsx src"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
@@ -23,10 +30,15 @@
     "@tauri-apps/cli": "^1",
     "@types/react": "^18.2.70",
     "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/eslint-plugin": "^7.4.0",
+    "@typescript-eslint/parser": "^7.4.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
     "husky": "^9.0.11",
     "less": "^4.2.0",
+    "lint-staged": "^15.2.2",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.0.2",
