prettier and eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,7 @@
       "@components/*": ["src/components/*"],
       "@api/*": ["src/api/*"],
       "@state/*": ["src/store/*"],
-      "@sections/*": ["src/sections/*"],
+      "@sections/*": ["src/sections/*"]
     }
   },
   "include": ["src"],
