--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     ]
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.12",
     "@heroicons/react": "^2.1.3",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "@reduxjs/toolkit": "^2.2.3",
     "@tauri-apps/api": "^1",
     "react": "^18.2.0",
